tests/invalid/loops/do_no_semicolon.rs
/*
fail: 1
*/

main(): int {
    do
        3;
    while (4)
}